<package>
  <name>rviz_map_plugin</name>
  <description>
    RViz display types and tools for the mesh_msgs package.
  </description>
  <version>1.0.0</version>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <author email="mmrozins@uos.de">Marcel Mrozinski</author>
  <author email="krschmidt@uos.de">Kristin Schmidt</author>
  <author email="jvogtherr@uos.de">Jan Philipp Vogtherr</author>
  <buildtool_depend>catkin</buildtool_depend>

  <license>BSD</license>
  <url>http://ros.org/wiki/rviz_map_plugin</url>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>hdf5_map_io</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mesh_msgs</run_depend>
  <run_depend>hdf5_map_io</run_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin.xml"/>
  </export>
</package>
