<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_mesh_tools_plugins</name>
  <description>
    RViz display types and tools for the mesh_msgs package.
  </description>
  <version>1.1.0</version>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="krschmidt@uos.de">Kristin Schmidt</author>
  <author email="jvogtherr@uos.de">Jan Philipp Vogtherr</author>
  <author email="malte@klpiening.de">Malte kleine Piening</author>
  <buildtool_depend>catkin</buildtool_depend>

  <license>BSD-3</license>
  <url>https://github.com/uos/mesh_tools/tree/master/rviz_mesh_tools_plugins</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_assimp_vendor</depend>
  <depend>std_msgs</depend>
  <depend>mesh_msgs</depend>
  <depend>hdf5_map_io</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>message_filters</depend>
  <depend>ocl-icd-opencl-dev</depend>
  <depend>opencl-headers</depend>
  
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
